# lizard

./: .gitignore  Cargo.toml  README.md  derivation.nix  flake.nix  package.nix
.github/workflows/: decode-server.yml  lizard.yml
nixos-module/: default.nix
src/: main.rs  state.rs  structs.rs
src/routes/: gtfs.rs  mod.rs  vehicles.rs
tests/vm/: default.nix  lizard.nix
