[package]
name = "lizard"
version = "0.1.0"
edition = "2021"

[dependencies]
tlms = { version = "0.9", git = "https://github.com/tlm-solutions/tlms.rs", features = ["grpc", "locations"]} # tag = "v0.8.0"
clap = { version = "4", features = ["derive"] }

actix-web = {version = "4", features = []}
actix-web-prom = "0"
actix-cors = "0"
actix-session = {version = "0", features = ["redis-actor-session"]}

# serde serialization / deserialization
serde_json = "1"
serde = { version = "1", features = ["derive"] }

actix-redis = "*"
redis = {version = "0.23", features = ["tokio", "r2d2", "cluster"]}

# utils
uuid = { version = "1", features = ["serde", "v4"] }
env_logger = "0"
log = "0"
rand = "0"

# gtfs
gtfs-realtime = "0.1.0"

utoipa = { version = "3", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
regex = "1"
derive_more = "0"
chrono = "*"
futures = "0.3"
